--- a/package.json
+++ b/package.json
@@ -1,21 +1,15 @@
 {
-  "name": "edusimulate-–-smart-learning-reimagined",
-  ...
-  "homepage": "https://aayush01v-creator.github.io/edusimulate-–-smart-learning-reimagined",
-  ...
-}
-{
-  "name": "edusimulate-–-smart-learning-reimagined",
+  "name": "edusimulate---smart-learning-reimagined",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://aayush01v-creator.github.io/Arvanago/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
     "predeploy": "npm run build",
-  "deploy": "gh-pages -d dist"
-    }
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "react": "^19.2.0",
@@ -27,6 +21,7 @@
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
     "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "gh-pages": "^6.0.0"
   }
 }
