--- a/package.json
+++ b/package.json
@@ -1,27 +1,23 @@
 {
-  "name": "edusimulate---smart-learning-reimagined",
+  "name": "edusimulate",
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://aayush01v-creator.github.io/Arvanago/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
     "@google/genai": "^1.29.0",
-    "firebase": "^12.5.0"
+    "firebase": "^12.5.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
     "typescript": "~5.8.2",
-    "vite": "^6.2.0",
-    "gh-pages": "^6.0.0"
+    "vite": "^6.2.0"
   }
 }
